--- a/slides/continuous_l2.Rmd
+++ b/slides/continuous_l2.Rmd
@@ -24,24 +24,17 @@ knitr::opts_chunk$set(warning = FALSE,
 
 if (!require(pacman)) install.packages('pacman', repos = 'https://cran.rstudio.com')
 pacman::p_load(tidyverse, here, knitr, dplyr, ggplot2, blogdown, rio)
+needs(gifski)
 ```
 
 ```{r, echo = F}
 who <- import(here::here("data", "life_expectancy.csv")) %>% 
   janitor::clean_names() %>% 
-  # filter(year == 2015) %>% 
+  filter(year == 2015) %>%
   select(country, status, year, life_expectancy) %>% 
   rename(region = country) %>% 
   mutate(life_expectancy = round(life_expectancy, digits = 0))
 
-world <- map_data("world")
-
-who1<- unique(who$region)
-world1 <- unique(world$region)
-
-
-ggplot(subset(who, year == 2013), aes(x = life_expectancy)) +
-  geom_density()
 ```
 
 # Agenda
@@ -87,25 +80,225 @@ Shape:
 + Symmetrical
 
 ---
+# Review
+## Z-unit Distribution
+
+* A normal distribution can have any mean and any (positive) standard deviation.
+* A z normal distribution is a useful distribution with a mean of 0 ($\mu$) and a standard deviation ($\rho$) of 1.
+
+```{r echo=FALSE}
+sim_data <- data_frame(value = rnorm(n = 1000000, mean = 0, sd = 1))
+
+ggplot(sim_data, aes(value)) +
+  geom_density(adjust = 3) +
+  scale_x_continuous(limits = c(-4, 4),
+                     breaks = c(seq(-4, 4, 1))) +
+  ylim(0, 0.4) +
+  theme_classic() +
+  ggtitle("Z Distribution", subtitle =  "m = 0, sd = 1") +
+  theme(plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5))
+```
+---
+# Transforming Distributions
+* Any normal distribution can be transformed into a z distribution using a linear function.
+
+Each observation is transformed into a **z-score** using the following formula:
+$$z = \frac{X - \mu}{\rho}$$
+
+* A z-score is calculated by **subtracting the mean** from each value and **dividing by the standard deviation**.
+
+* An observations z-score value is equal to its deviation from the mean, as measured in standard deviation units.
+
+---
+
+# Applying Concepts
+## Transforming Distribution
+
+Here is a histogram of our life expectancy data.
+```{r, echo = F}
+hist(who$life_expectancy)
+```
+
+We are going to create a new variable called `life_expectancy_zscore` using the linear function described on the previous slide.
+```{r}
+who$life_expectancy_zscore <- (who$life_expectancy - mean(who$life_expectancy))/sd(who$life_expectancy)
+
+## Let's look at the first few transformed values 
+head(who$life_expectancy_zscore)
+
+## Histogram of the new z-scores
+hist(who$life_expectancy_zscore)
+
+```
+
+---
+# Review
+## Normal Distribution
+
+* The area under a normal distribution is always equal to 1.
+* The area under the curve corresponds to the proportion of observations.
+* You always know the percentage of observations in any part of a normal distribution.
+
+```{r, echo = F}
+sim_data <- data_frame(value = rnorm(n = 1000000, mean = 0, sd = 1))
+
+ggplot(sim_data, aes(value)) +
+  geom_density(adjust = 3) +
+  geom_segment(aes(x = 0, xend = 0, y = 0, yend = .38)) +
+  geom_segment(aes(x = -1, xend = -1, y = 0, yend = .24)) +
+  geom_segment(aes(x = 1, xend = 1, y = 0, yend = .24)) +
+  geom_segment(aes(x = -2, xend = -2, y = 0, yend = .056)) +
+  geom_segment(aes(x = 2, xend = 2, y = 0, yend = .056)) +
+  geom_segment(aes(x = -3, xend = -3, y = 0, yend = .005)) +
+  geom_segment(aes(x = 3, xend = 3, y = 0, yend = .005)) +
+  annotate("text", x = -.5, y = .2, label = "34%") +
+  annotate("text", x = .5, y = .2, label = "34%") +
+  annotate("text", x = -1.5, y = .05, label = "14%") +
+  annotate("text", x = 1.5, y = .05, label = "14%") +
+  annotate("text", x = -2.5, y = .05, label = "2%") +
+  annotate("text", x = 2.5, y = .05, label = "2%") +
+  annotate("text", x = -3.5, y = .05, label = "<1%") +
+  annotate("text", x = 3.5, y = .05, label = "<1%") +
+  scale_x_continuous(limits = c(-4, 4),
+                     breaks = c(seq(-4, 4, 1))) +
+  ylim(0, 0.4) +
+  theme_classic()
+
+```
+
+What percentage of observations fall at least 1 standard deviation below the mean?
+
+---
 # Population vs. Sample Distributions
+ 
+Using the WHO dataset, let's say we want to identify the mean life expectancy across all countries. However, let's also assume we only have the resources to sample from 20 countries.
 
-Many phenomena in the natural and social sciences resemble a normal distribution. 
+.pull-left[
 
-Particularly as distributions get smaller, they can be idiosyncratic or have
+Our **population statistic** represents the true value across all countries.
+
+```{r, echo = F}
+world <- map_data("world")
+
+regions <- world %>% 
+  distinct(region) %>% 
+  sample_n(10) %>% 
+  mutate(sample = 1)
+
+world <- left_join(world, regions) %>% 
+  mutate(population = 1)
+```
+
+```{r, echo = F, fig.height=3, fig.width= 4}
+ggplot() +
+  geom_map(
+    data = world, map = world,
+    aes(long, lat, map_id = region, fill = as.factor(population)),
+    color = "black", size = 0.1
+  ) +
+  theme(legend.position = "none")
+```
+]
+
+.pull-right[
+Our **sample statistic** will be our estimate of the population statistic using the countries we examine.
+
+```{r, echo = F, fig.height = 3, fig.width = 4}
+ggplot() +
+  geom_map(
+    data = world, map = world,
+    aes(long, lat, map_id = region, fill = as.factor(sample)),
+    color = "black", size = 0.1
+  ) +
+  theme(legend.position = "none")
+```
+]
+
+---
+# Sample Estimates
+
+* Assume that our <span style="color: blue;">true population statistic </span> is 71.64. 
+
+* Each possible random sample of 10 countries will produce its own <span style="color: red;"> sample mean or population estimate </span>.
+```{r, echo = F}
+sim_num <- seq(1:100)
+region_samp <- vector("list", 100)
+for (i in seq_along(region_samp)){
+    region_samp[[i]] <- who %>% 
+      filter(str_length(region) <= 12) %>% 
+      sample_n(10)
+}
+
+names(region_samp) <- paste0("sim_", sim_num)
+```
+
+```{r, echo = F, fig.width = 8, fig.height = 5}
+plots <- lapply(region_samp[1:4], function(x) {
+    ggplot(x, aes(x = region, y = life_expectancy)) +
+    geom_point() +
+    geom_hline(yintercept = mean(x$life_expectancy), color = "red", linetype = "dotted") +
+    geom_hline(yintercept = mean(who$life_expectancy), color = "blue") +
+    geom_label(aes(x = +Inf, y = mean(x$life_expectancy), vjust = 2, label =  paste(mean(x$life_expectancy))), colour="red", size = 4) +
+    ylim(50, 85) +
+    coord_flip() +
+    theme_minimal()
+})
+library(gridExtra)
+marrangeGrob(plots, nrow=2, ncol=2, top = paste("Estimated Population Means Across Four Different Samples"))
+```
+
+These estimated means have their own variability around the true population mean.
+---
+
+
+---
+# Population vs. Sample Distribution
+
+If we sample our population **100 times** and plot the estimated mean of each sample, the estimated means begin to form their own normal distribution.
 
 ```{r}
+samp_means <- tibble(samp = 1:100, means = map_dbl(region_samp, ~mean(.$life_expectancy)))
+```
 
 
+```{r, animation.hook="gifski", interval = 0.4, echo = F, eval = F}
+for (i in 1:100) {
+   x <- ggplot(subset(samp_means, samp <= i), aes(means)) +
+            geom_histogram(fill = "red") +
+            geom_vline(xintercept = 71.64, color = "blue") +
+   xlim(65, 85) +
+   xlab("Mean Life Expectancy") +
+   theme_minimal()
+   print(x)
+ }
+```
+
+The mean of our sampling distribution (mean of means) approximates the <span style="color: blue;"> population mean </span>. This is an example of the **central limit theorem**.
+
+---
+# Central Limit Theorem
+
+Given a population mean $\mu$ and standard deviation of $\rho$, the sampling distribution of the mean is a normal distribution with a mean equal to $\mu$ and standard deviation equal to $\frac{\rho}{\sqrt{n}}$, where *n* is the sample size.
+
+The distribution of sample means will approach the normal distribution as the sample size increases regardless of the shape of the population distribution.
+
+The sampling distribution of means approximates a normal distribution because it is estimating a statistic of the population distribution. It is not "recreating" the shape of the population distribution.
+
+NEED VISUAL?
+---
+# One Sample T-Test
+* One of the most foundational statistical tests in classical statistics.
+
+* The purpose of a t-test is to assess whether a sample mean's deviation from the true population mean could be due to random sampling variability.
+  + Tells us the probability that we would obtain our observed mean simply through random sampling *n* countries in our WHO dataset?
+  
+* Generally, if the probability of obtaining the observed mean through random sampling is <5%, the result is considered statistically significant.
+
+```{r}
+ggplot(who, aes(x = life_expectancy, color = status)) +
+  geom_density(adjust = 3)
 
 
 ```
 
-# Life Expectancy Data
-Suppose you are working for the World Health Organization and are investigating life expectancy across different regions. 
-
-> Using this dataset, we can ask questions like:
-> * How does life expectancy compare in developing vs. developed regions?
-> * What is the relationship between average years of schooling and life expectancy?
-
----
-#
