--- a/assignments/assignment03.Rmd
+++ b/assignments/assignment03.Rmd
@@ -76,17 +76,21 @@ Note that you do not need to include these responses in your html/pdf file; only
 
 3.1 Random sample from the population 
 
-3.1.1. Using the mean and standard deviation of *vocabulary*, create a normal distribution plot (same type with the previous one) and add to your previous plot (note: set.seed(123) so we can get the same sample from the randomization). You may choose one of the two ways to do this: (a) use base R code to put the two plots side-by-side, or (b) use {ggplot2} package to put the two into one plot. 
+3.1.1. Using the mean and standard deviation of *vocabulary* to generate a normally distributed variable and name it *vocabulary_random* (hint: use the rnorm function that randomly select a vector of numbers based on the number of observations, mean, and standard deviation you define). 
 
-3.1.2. What are the statistical meanings of this new plot?
+IMPORTANT NOTE: before simulation, make sure to put set.seed(123) in your code so you can get the same sample and same results with those in the key.
 
-3.1.3. Compare these two distributions and interpret what you have observed.
+3.1.2. Using the same type of plot you used for *vocabulary*, plot the distribution of *vocabulary_random*  and compare the two plots. You may choose one of the two ways to do this: (a) use base R code to put the two plots side-by-side, or (b) use {ggplot2} package to put the two into one plot. 
 
-3.1.4. Despite whether *vocabulary* is normally distributed, you wand to assume normal distribution in your future analysis. At this point, please specify your null hypothesis and (2-tailed) alternative hypothesis for the single-samle t-test.
+3.1.3. What are the statistical meanings of this new plot? Compare these two distributions and write one sentence to describe what you have observed. Circle back to question 2.1.2, do you think now whether vocabulary is normally distributed? 
 
 3.2 One-sample t-test
 
-3.2.1 To test whether your null hypothesis is true, run a 
+3.2.1 Despite whether *vocabulary* is normally distributed, you want to assume normal distribution in your future analysis. At this point, please specify your null hypothesis for the one-sample t-test (which you'll conduct in the following questions to see if your assumption holds).
+
+3.2.2. What is the mean of *vocabulary_random*? Is it equal to  the mean of *vocabulary*? 
+
+3.2.3. We consider the population mean is equal to the mean of *vocabulary_random*. To test whether your null hypothesis in 3.2.1 is true, run a one-sample t-test and write 2-3 sentences to interpret your result.
 
 
 
