--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -110,7 +110,7 @@ Assignment 3:
 
  * Due TBD
  * [html file](./assignments/assignment03.html)
- * [cont.csv dataset](./data/cont.csv)
+ * [cont.csv dataset (./data/cont.csv)
 
 
 
