--- a/assignments/assignment04.Rmd
+++ b/assignments/assignment04.Rmd
@@ -34,7 +34,7 @@ Please upload below two files on Canvas before TBD time:
 
 The dataset we'll be using in this assignment is drawn from the NCRECE [Teacher Professional Development Study (PDS)](https://www.icpsr.umich.edu/web/ICPSR/studies/34848) data. This professional development study was a randomized controlled evaluation of two forms of professional development (PD) - coursework (phase 1) and consultancy (phase 2) - delivered to about 490 early childhood education teachers across the nation. These PD supports aimed to improve teachers' implementation of language/literacy activities and interactions with children, as well as promote gains in children's social and academic development. 
 
-The primary goals of the intervention were to improve language and literacy skills, however, prior studies have shown that there were no observed average impacts of either the coursework or the consultancy PD intervention on child outcomes at the end of phase 2 ([Pianta et al., 2017](https://www.tandfonline.com/doi/abs/10.1080/10409289.2017.1319783?journalCode=heed20)). We draw a sample similar to the one used in Pianta et al (2017) but limit to only teachers who were treated in phase 1 then assigned to either treatment or control group in phase 2. This sample allows you to answer two questions: (a) did the consultancy PD intervention (phase 2) improve children vocabulary? and (b) did the dosage of the coursework PD intervention (phase 1) impact children vocabulary?
+The primary goals of the intervention were to improve language and literacy skills, however, prior studies have shown that there were no observed average impacts of either the coursework or the consultancy PD intervention on child outcomes at the end of phase 2 ([Pianta et al., 2017](https://www.tandfonline.com/doi/abs/10.1080/10409289.2017.1319783?journalCode=heed20)). We draw a sample similar to the one used in Pianta et al (2017) but limit to only teachers who were treated in phase 1 then assigned to either treatment or control group in phase 2. This sample allows you to answer two questions: (a) did the consultancy PD intervention improve children vocabulary? and (b) did the dosage of the coursework PD intervention impact children vocabulary? You will answer these two questions in the assignments 3 and 4.
 
 **Sample**. Our dataset is teacher-level data for 126 preschool teachers. They were in the treatment group for the 14-session coursework PD intervention, had no missing data on coursework attendance, and were in either the treatment or control group for the consultancy PD intervention.
 
@@ -50,12 +50,43 @@ Details on all variables are as follows:
 
 ### Assignment Details
 
-#### 1. Dataset
+Prepare your data (same with assignment 3): open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named "data". Download the [cont.csv dataset](./data/cont.csv) and store it in the folder "data". Create an Rmd/R file in the project root directory. Then read the data into your R environment. Make sure to check whether the variable *treat* is factor as well as whether *coursework* and *vocabulary* are double. Transform them into correct types if needed. 
 
-1.1. Open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named "data". Download the [cont.csv dataset](./data/cont.csv) and store it in the folder "data". Create an Rmd/R file in the project root directory. Then read the data into your R environment. 
-Make sure to check whether the variable *treat* is factor as well as whether *coursework* and *vocabulary* are double. Transform them into correct types if needed. 
+#### 1. Descriptive Statistics
 
-Note that you do not need to include these responses in your html/pdf file; only in your RMD/R file.
+1.1. Summarize the dataset. Specifically, create a table for the cont.csv dataset to show the means and standard deviations of the continuous variables and the counts and percentages for each category of the categorical variables. Write 2-3 sentences to report and interpret these statistics.
 
-1.2. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what type is each variable, how many rows/observations, etc.).  
+1.2. Summarize the outcome variable *vocabulary* by one of the two predictor variables, *treat*. Specifically, create a table and a plot (label the x and y axis) to show the mean and standard deviation of *vocabulary* separately for the treatment and control groups. 
+
+ * 1.2.1. Write 2-3 sentences to report and interpret these statistics. 
+ * 1.2.2. Compare the mean of *vocabulary* for the consultancy treatment group and control group. Can you decide which is larger? Why or why not?
+
+1.3 Create a plot (label the x and y axis) to visualize the relationship between *vocabulary* and another predictor variable *coursework*. 
+
+ * 1.3.1. Write one sentence describe your observation. 
+ * 1.3.2. Can you conclude whether teachers who attended more coursework have higher student score? Why or why not?
+
+#### 2. Research Question (a): Did the consultancy PD intervention improve children vocabulary?
+
+2.1. Write your null hypothesis and the assumption(s) you make in investigating this research question.
+
+2.2. Test your hypothesis
+
+ * 2.2.1. Which hypothesis testing you choose to answer this question? Why?
+
+ * 2.2.2. Run the test then report and interpret your result.
+
+2.3. What is your answer to this research question?
+
+#### 3. Research Question (b): Did the dosage of the coursework PD intervention impact children vocabulary?
+
+3.1. Write your null hypothesis and the assumption(s) you make in investigating this research question.
+
+3.2. Test your hypothesis
+
+ * 3.2.1. Which hypothesis testing you choose to answer this question? Why?
+
+ * 3.2.2. Run the test then report and interpret your result.
+
+3.3. What is your answer to this research question?
 
