--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -99,9 +99,9 @@ Final assignment
 
 Deadline: TBD
 
-Download: [html file](./assignments/assignment05.html); [cont.csv dataset](./data/ah.csv)
+Download: [html file](./assignments/assignment05.html); [ah.csv dataset](./data/ah.csv)
 
-Key: [doc file](./assignments/keys/assignment05_key.docx); [R script](./assignments/keys/assignment05_key.R)
+Key: 
 
 
 
